2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix errors on compressed NTFS with 512B clusters.

	* include/grub/ntfs.h (grub_ntfscomp_func_t): Use appropriately sized
	types.
	* grub-core/fs/ntfs.c (grub_ntfs_read): Return correct -1 on error and
	not 0.
	* grub-core/fs/ntfscomp.c (read_block): Use appropriately-sized types.
	Relax check for inline extents.
	(ntfscomp): Return correct -1 on error and not 0.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix handling of prefix containing spaces.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/squash4.c (grub_squash_inode): Fix offset field.
	(grub_squash_read_data): Fix offset byte-swapping.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/misc.c (grub_strcmp): Use unsigned comparison as
	per common usage and preffered in several parts of code.
	(grub_memcmp): Likewise.
	(grub_strncmp): Likewise.
	* include/grub/misc.h (grub_strcasecmp): Likewise.
	(grub_strncasecmp): Likewise.
	* Makefile.util.def (cmp_test): New test.
	(grub_script_strcmp): Likewise.
	* tests/cmp_unit_test.c: New file.
	* tests/grub_script_strcmp.in: Likewise.
	* grub-core/fs/hfsplus.c (grub_hfsplus_cmp_catkey): Add a comment.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/pci.h: Move enums into no-asm part.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/bfs.c (bfs_strcmp) [MODE_AFS]: Use signed comparison.

2012-05-04  Samuel Thibault <samuel.thibault@ens-lyon.org>

	* util/getroot.c (find_hurd_root_device): Try to make error message
	and comments to translators clearer.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/menuentry.c: Fix typo in TRANSLATORS comments.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/fs.c (grub_fs_probe) [GRUB_UTIL]: Add workaround for
	btrfs.

2012-05-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.cfg: Update.
